tests/effects-corpus/corpus/accept/index_u64_in_rawmem_row.pdx
// RawMem effect in function signature (phase-3-m1-005)
// This function declares !{RawMem} effect row, allowing it to "call" index_u64.
// Phase-3-m1-005: the actual call requires m1-006 wiring; this is a parser-level smoke test.

module IndexInRawMem = structure {
  let read_u64: (*u64, u64) -!{RawMem}-> u64 =
    fn (xs: *u64, idx: u64) ->
      // index_u64(xs, idx)
      // TODO: actual call requires m1-006 call-resolution dispatch path
      0
}
